<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="365dp"
        android:layout_height="39dp"
        android:src="@drawable/serach"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="311dp"
        android:layout_height="35dp"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="MissingConstraints">

    </SearchView>


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.012">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/document"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    android:autofillHints="Scan any doc"
                    app:srcCompat="@drawable/doc"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/document"
                    android:textSize="10sp" />

            </TableLayout>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/book"
                    android:autofillHints="Scan Book"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/book"
                    android:textSize="10sp" />


            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/aadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/aadhar"
                    android:autofillHints="Scan Aadhar Card"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/aadhar"
                    android:textSize="10sp" />


            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageButton
                    android:id="@+id/passport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/passport"
                    android:autofillHints="Scan PassPort"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/passport"
                    android:textSize="10sp" />


            </TableLayout>


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/voterid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/voterid"
                    android:autofillHints="Scan Voter ID"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/voter_id"
                    android:textSize="10sp" />


            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/pancard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/pancard"
                    android:autofillHints="Scan Pan Card"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/pan_card"
                    android:textSize="10sp" />


            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/cards"
                    android:autofillHints="Scan any type of Card"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/card_scan"
                    android:textSize="10sp" />


            </TableLayout>








            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/qrscan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/qrcode" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/qr_code"
                    android:textSize="10sp" />
            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_of_btn"
                    app:srcCompat="@drawable/sign"
                    android:autofillHints="Add your Sign"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/add_signature"
                    android:textSize="10sp" />


            </TableLayout>


        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/centerbg"
        android:layout_width="0dp"
        android:layout_height="557dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/center10"
        tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="406dp"
        android:layout_height="454dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/horizontalScrollView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/bottonbg"
        android:layout_width="0dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/rectangle_bottom" />

    <ImageView
        android:id="@+id/all_docs"
        android:layout_width="23dp"
        android:layout_height="25dp"
        android:background="@drawable/bg_of_btn"
        app:layout_constraintBottom_toBottomOf="@+id/bottonbg"
        app:layout_constraintEnd_toEndOf="@+id/bottonbg"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottonbg"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/docs" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:background="@drawable/bg_of_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottonbg"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/ic_baseline_account_box_24" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="91dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottonbg"
        app:layout_constraintEnd_toEndOf="@+id/bottonbg"
        app:layout_constraintStart_toStartOf="@+id/bottonbg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932"
        app:srcCompat="@drawable/cam" />


</androidx.constraintlayout.widget.ConstraintLayout>